--- a/app/assets/stylesheets/games.scss.erb
+++ b/app/assets/stylesheets/games.scss.erb
@@ -42,7 +42,8 @@ h2 {
   border-bottom: dashed 1px black;
   margin-bottom: 20px;
 }
-.games.play h2 {
+
+.game_header h2 {
   font-size: 28px;
 }
 
@@ -92,4 +93,40 @@ h2.drawer_play {
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 4px;
+}
+
+/* GAMES#RESULT */
+h2.result {
+  font-size: 28px;
+  padding: 15px 0 0;
+}
+
+.result_word {
+  color: red;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  font-size: 20px;
+}
+
+.games.result p {
+  padding-bottom: 10px;
+  font-size: 20px;
+}
+
+.games.result img {
+  border: solid 1px black;
+  width: 660px;
+  display: block;
+}
+
+a.playAgain {
+  color: red;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 20px;
+}
+
+.games.result p:last-child {
+  margin-top: 15px;
 }
