--- a/app/views/games/result.html.erb
+++ b/app/views/games/result.html.erb
@@ -1,11 +1,34 @@
-<% console %>
-<% if @game.result === 'won' %>
-  <h2>Yay! You both won!</h2>
-<% elsif @game.result === 'lost' %>
-  <h2>Oh no! You both lost... better luck next time!</h2>
-<% end %>
+<h1>How do you doodle?</h1>
 
-<h3>Your word was: <%= @game.word.word %></h3>
+<div class="nav-container">
+  <nav class="pages">
+    <%= link_to 'Game', root_path %>
+    <%= link_to 'Gallery', words_path %>
+  </nav>
+
+  <nav class="user-account">
+    <% if @current_user.present? %>
+      <%= link_to 'My Account', edit_user_path(@current_user) %>
+      <%= link_to 'Sign Out', login_path, method: 'delete' %>
+    <% else %>
+      <%= link_to 'Sign In', login_path  %>
+      <%= link_to 'Sign Up', new_user_path %>
+    <% end %>
+  </nav>
+
+</div> <!-- nav-container -->
+
+  <% if @game.result === 'won' %>
+    <h2 class="result">Yay! You both won!</h2>
+  <% elsif @game.result === 'lost' %>
+    <h2 class="result">Oh no! You both lost... better luck next time!</h2>
+  <% end %>
+
+<p>
+  Your word was:
+  <span class="result_word"><%= @game.word.word %></span>
+</p>
 
 <%= cl_image_tag @game.image, class: "overImage" %>
-<%= link_to 'Play Again', root_path %>
+
+<p>Why not <%= link_to 'play again', root_path, class: 'playAgain' %>?</p>
