--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,25 @@
-<h2><%= @current_user.name %>, Edit your profile</h2>
-<%= render partial: 'form' %>
+<h1>How do you doodle?</h1>
+
+<div class="nav-container">
+  <nav class="pages">
+    <%= link_to 'Game', root_path %>
+    <%= link_to 'Gallery', words_path %>
+  </nav>
+
+  <nav class="user-account">
+    <% if @current_user.present? %>
+      <%= link_to 'My Account', edit_user_path(@current_user) %>
+      <%= link_to 'Sign Out', login_path, method: 'delete' %>
+    <% else %>
+      <%= link_to 'Sign In', login_path  %>
+      <%= link_to 'Sign Up', new_user_path %>
+    <% end %>
+  </nav>
+
+</div> <!-- nav-container -->
+
+<div class="account_container">
+  <h2><%= @current_user.name %>, Edit your profile</h2>
+
+  <%= render partial: 'form' %>
+</div>
