--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,8 +1,27 @@
-<h1>All Drawings</h1>
+<h1>How do you doodle?</h1>
+
+<div class="nav-container">
+  <nav class="pages">
+    <%= link_to 'Game', root_path %>
+    <%= link_to 'Gallery', words_path %>
+  </nav>
+
+  <nav class="user-account">
+    <% if @current_user.present? %>
+      <%= link_to 'My Account', edit_user_path(@current_user) %>
+      <%= link_to 'Sign Out', login_path, method: 'delete' %>
+    <% else %>
+      <%= link_to 'Sign In', login_path  %>
+      <%= link_to 'Sign Up', new_user_path %>
+    <% end %>
+  </nav>
+
+</div> <!-- nav-container -->
 
 <div class="main-container">
   <div class="words-list">
     <ul>
+      <li class="all_words">words</li>
       <% @words.each do |word| %>
         <li class="word" value="<%= word.id %>">
           <%= word.word %>
