--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -98,7 +98,7 @@ input[type=submit] {
 }
 
 input[type=text], input[type=email], input[type=password] {
-  border: solid 1px black;
+  border: solid 2px #999;
   padding: 4px;
   margin-right: 5px;
 }
@@ -107,4 +107,8 @@ label {
   display: inline-block;
   width: 100px;
   padding-bottom: 5px;
+}
+
+input, button {
+  outline: none;
 }
