--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -18,13 +18,13 @@
 
 .gallery-drawing {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   border: solid black 1px;
 }
 
 .drawing-icon {
   width: 100%;
-  height: 100%;
+  // height: 100%;
 }
 
 .words-list li {
