--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -28,7 +28,9 @@
 
   <h2>Instructions</h2>
 
-  <p>Click the play button above and you'll be paired with another player. If you are the drawer, you will have 30 seconds to sketch you're given word. If you are the guesser, you have 30 seconds to guess the given word. Easy as pie, right!</p>
+  <p>Click the play button above and you'll be paired with another player. If you are the drawer, you will have 30 seconds to sketch your given word. If you are the guesser, you have 30 seconds to guess the given word. Easy as pie, right!</p>
+  <br/>
+  <p>Use either the Leap Motion or your mouse to draw on the canvas!</p>
 
   <div class="playButton">
     <%= link_to 'Play', games_path, method: 'POST' %>
