--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <!-- Socket URI passed from config/environment/ -->
     <%= action_cable_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
