--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the words controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 .main-container {
   margin: 30px 0;
   display: grid;
@@ -12,19 +8,20 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1em;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-row-gap: 1em;
   width: 100%;
 }
 
 .gallery-drawing {
   width: 100%;
-  // height: 100%;
+  height: 100%;
   border: solid black 1px;
 }
 
 .drawing-icon {
   width: 100%;
-  // height: 100%;
+  height: 100%;
 }
 
 .words-list li {
